--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,1 +1,9 @@
 katori.counting_down=5
+
+# ALIYUN SLS
+aliyun.sls.disabled=YES
+aliyun.sls.project=
+aliyun.sls.logstore=
+aliyun.sls.endpoint=cn-hangzhou-intranet.log.aliyuncs.com
+aliyun.sls.accessKeyId=
+aliyun.sls.accessKeySecret=
