--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>io.github.sinri</groupId>
             <artifactId>DryDock</artifactId>
-            <version>1.4.4</version>
+            <version>1.4.6-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
